# usage-widget

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  epic.yml  task.yml
.omc/state/: agent-replay-f2ae7008-03a4-457f-a8e3-a6fbd85a69e4.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
app/: __init__.py  api.py  config.py  main.py  poller.py  tray.py
backend/: __init__.py  aggregate.py  ccusage_client.py  errors.py  export.py  model.py  normalize.py
tests/: conftest.py  test_aggregate.py  test_api.py  test_ccusage_client.py  test_export.py  test_model.py  test_normalize.py  test_poller.py
tests/fixtures/: claude_daily.json  claude_session.json  codex_daily.json  malformed.json
ui/: app.js  panel.html  styles.css
